Incorporate suggestions.